--- a/intruder-detection.ipynb
+++ b/intruder-detection.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intruder Detection\n",
+    "Python project for detecting intruders in live video with Firebase alert and auto-recording\n",
+    "\n",
+    "### Author\n",
+    "Yagaagowtham P ([github.com/yagaag](https://github.com/yagaag))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -473,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
